--- a/package.json
+++ b/package.json
@@ -13,6 +13,34 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.35.1",
+        "sass-loader": "^12.1.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.3",
+        "@popperjs/core": "^2.9.2",
+        "bootstrap": "^5.0.2",
+        "datatables.net-autofill-bs5": "^2.3.9",
+        "datatables.net-bs5": "^1.10.25",
+        "datatables.net-buttons-bs5": "^1.7.1",
+        "datatables.net-colreorder-bs5": "^1.5.4",
+        "datatables.net-datetime": "^1.1.0",
+        "datatables.net-dt": "^1.1.0",
+        "datatables.net-editor-bs5": "^2.0.3",
+        "datatables.net-fixedcolumns-bs5": "^3.3.3",
+        "datatables.net-fixedheader-bs5": "^3.1.9",
+        "datatables.net-keytable-bs5": "^2.6.2",
+        "datatables.net-responsive-bs5": "^2.2.9",
+        "datatables.net-rowgroup-bs5": "^1.1.3",
+        "datatables.net-rowreorder-bs5": "^1.2.8",
+        "datatables.net-scroller-bs5": "^2.0.4",
+        "datatables.net-searchbuilder-bs5": "^1.1.0",
+        "datatables.net-searchpanes-bs5": "^1.3.0",
+        "datatables.net-select-bs5": "^1.3.3",
+        "jquery": "^3.6.0",
+        "jszip": "^3.6.0",
+        "pdfmake": "^0.1.71"
     }
 }
