--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
         "@popperjs/core": "^2.9.2",
+        "bootbox": "^5.5.2",
         "bootstrap": "^5.0.2",
         "datatables.net-autofill-bs5": "^2.3.9",
         "datatables.net-bs5": "^1.10.25",
@@ -41,6 +42,8 @@
         "datatables.net-select-bs5": "^1.3.3",
         "jquery": "^3.6.0",
         "jszip": "^3.6.0",
-        "pdfmake": "^0.1.71"
+        "pdfmake": "^0.1.71",
+        "select2": "^4.1.0-rc.0",
+        "select2-theme-bootstrap4": "^1.0.0"
     }
 }
